--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "mock server app",
   "main": "server.js",
   "scripts": {
-    "start":"node server.js"
+    "start":"node server.js",
+    "build":"npm install; npm run build"
   },
   "keywords": [],
   "author": "Vikas Dongarwar",
