--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start":"node server.js",
-    "build":"npm install; npm run build"
+    "build":"npm install; npm run build",
+    "server":"json-server --watch db.json --port 8080"
   },
   "keywords": [],
   "author": "Vikas Dongarwar",
